Tags - Url names

--- a/my_site/my_app/templates/my_app/example.html
+++ b/my_site/my_app/templates/my_app/example.html
@@ -6,5 +6,6 @@
 </head>
 <body>
     <h1>Example HTML connected!</h1>
+    <h2><a href={% url 'my_app:variable' %}>Click me to go to Variable page</a></h2>
 </body>
 </html>
