--- a/my_site/my_app/templates/my_app/example.html
+++ b/my_site/my_app/templates/my_app/example.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
-
+{% load static %}
 {% block content %}
     <h1>This is inside the block in example.html</h1>
+<img src="{% static 'my_app/photo_2023-07-14_07-59-54.jpg' %}" alt="my image">
 {% endblock content %}
