--- a/my_dental_site/office/templates/office/list.html
+++ b/my_dental_site/office/templates/office/list.html
@@ -7,7 +7,7 @@
 <body>
     <ul>
         {% for person in patients %}
-            <li> {{person.last_name}} </li>
+            <li> {{person.last_name|title}} </li>
         {% endfor %}
     </ul>
 </body>
