--- a/my_crent_site/cars/templates/cars/rental_review.html
+++ b/my_crent_site/cars/templates/cars/rental_review.html
@@ -18,6 +18,7 @@
                     {{field.label_tag}}
                 </div>
                 {{field}}
+                {{field.errors}}
             {% endfor %}
             <input type="submit" value="Submit">
         </form>
